# SoftHSMv2

./: .appveyor.yml  .gitignore  .travis.sh  .travis.yml  AUTHORS  CMAKE-NOTES.md  CMAKE-WIN-NOTES.md  CMakeLists.txt  FIPS-NOTES.md  LICENSE  Makefile.am  NEWS  OSX-NOTES.md  README  README.md  WIN32-NOTES  WIN32-NOTES.md  appveyor.yml  appveyor_build.bat  autogen.sh  config.h.in.cmake  configure.ac  prepdist.sh  softhsm2.module.in
src/lib/: CMakeLists.txt  Makefile.am  Makefile.old  P11Attributes.cpp  P11Attributes.h  P11Objects.cpp  P11Objects.h  SoftHSM.cpp  SoftHSM.h  access.cpp  access.h  cryptoki.h  main.cpp
src/lib/common/: CMakeLists.txt  Configuration.cpp  Configuration.h  HandleFactory.h  IPCSignal.cpp  IPCSignal.h  Makefile.am  MutexFactory.cpp  MutexFactory.h  Semaphore.cpp  Semaphore.h  Serialisable.h  SimpleConfigLoader.cpp  SimpleConfigLoader.h  fatal.cpp  fatal.h  log.cpp  log.h  osmutex.cpp  osmutex.h  softhsm2.conf.5.in  softhsm2.conf.in
src/lib/crypto/: AESKey.cpp  AESKey.h  AsymmetricAlgorithm.cpp  AsymmetricAlgorithm.h  AsymmetricKeyPair.cpp  AsymmetricKeyPair.h  AsymmetricParameters.h  BotanAES.cpp  BotanAES.h  BotanCryptoFactory.cpp  BotanCryptoFactory.h  BotanDES.cpp  BotanDES.h  BotanDH.cpp  BotanDH.h  BotanDHKeyPair.cpp  BotanDHKeyPair.h  BotanDHPrivateKey.cpp  BotanDHPrivateKey.h  BotanDHPublicKey.cpp  BotanDHPublicKey.h  BotanDSA.cpp  BotanDSA.h  BotanDSAKeyPair.cpp  BotanDSAKeyPair.h  BotanDSAPrivateKey.cpp  BotanDSAPrivateKey.h  BotanDSAPublicKey.cpp  BotanDSAPublicKey.h  BotanECDH.cpp  BotanECDH.h  BotanECDHKeyPair.cpp  BotanECDHKeyPair.h  BotanECDHPrivateKey.cpp  BotanECDHPrivateKey.h  BotanECDHPublicKey.cpp  BotanECDHPublicKey.h  BotanECDSA.cpp  BotanECDSA.h  BotanECDSAKeyPair.cpp  (+234 more)
src/lib/crypto/test/: AESTests.cpp  AESTests.h  CMakeLists.txt  DESTests.cpp  DESTests.h  DHTests.cpp  DHTests.h  DSATests.cpp  DSATests.h  ECDHTests.cpp  ECDHTests.h  ECDSATests.cpp  ECDSATests.h  EDDSATests.cpp  EDDSATests.h  GOSTTests.cpp  GOSTTests.h  HashTests.cpp  HashTests.h  MacTests.cpp  MacTests.h  Makefile.am  RNGTests.cpp  RNGTests.h  RSATests.cpp  RSATests.h  chisq.c  cryptotest.cpp  ent.h  iso8859.c  randtest.c  randtest.h
src/lib/cryptoki_compat/: pkcs11.h
src/lib/data_mgr/: ByteString.cpp  ByteString.h  CMakeLists.txt  Makefile.am  RFC4880.cpp  RFC4880.h  SecureAllocator.h  SecureDataManager.cpp  SecureDataManager.h  SecureMemoryRegistry.cpp  SecureMemoryRegistry.h  salloc.cpp  salloc.h
src/lib/data_mgr/test/: ByteStringTests.cpp  ByteStringTests.h  CMakeLists.txt  Makefile.am  RFC4880Tests.cpp  RFC4880Tests.h  SecureDataMgrTests.cpp  SecureDataMgrTests.h  datamgrtest.cpp
src/lib/handle_mgr/: CMakeLists.txt  Handle.cpp  Handle.h  HandleManager.cpp  HandleManager.h  Makefile.am
src/lib/handle_mgr/test/: CMakeLists.txt  HandleManagerTests.cpp  HandleManagerTests.h  Makefile.am  handlemgrtest.cpp
src/lib/object_store/: CMakeLists.txt  DB.cpp  DB.h  DBObject.cpp  DBObject.h  DBToken.cpp  DBToken.h  Directory.cpp  Directory.h  File.cpp  File.h  FindOperation.cpp  FindOperation.h  Generation.cpp  Generation.h  Makefile.am  OSAttribute.cpp  OSAttribute.h  OSAttributes.h  OSObject.h  OSPathSep.h  OSToken.cpp  OSToken.h  ObjectFile.cpp  ObjectFile.h  ObjectStore.cpp  ObjectStore.h  ObjectStoreToken.cpp  ObjectStoreToken.h  SessionObject.cpp  SessionObject.h  SessionObjectStore.cpp  SessionObjectStore.h  UUID.cpp  UUID.h
src/lib/object_store/test/: CMakeLists.txt  (+26 more)
src/lib/pkcs11/: cryptoki.h  pkcs11.h  pkcs11t.h
src/lib/session_mgr/: CMakeLists.txt  Makefile.am  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
src/lib/slot_mgr/: CMakeLists.txt  Makefile.am  Slot.cpp  Slot.h  SlotManager.cpp  SlotManager.h  Token.cpp  Token.h
src/lib/test/: AsymEncryptDecryptTests.cpp  AsymEncryptDecryptTests.h  AsymWrapUnwrapTests.cpp  AsymWrapUnwrapTests.h  CMakeLists.txt  DeriveTests.cpp  DeriveTests.h  DigestTests.cpp  DigestTests.h  EncryptDecryptTests.cpp  EncryptDecryptTests.h  ForkTests.cpp  ForkTests.h  InfoTests.cpp  InfoTests.h  InitTests.cpp  InitTests.h  Makefile.am  ObjectTests.cpp  ObjectTests.h  README  RandomTests.cpp  RandomTests.h  SessionTests.cpp  SessionTests.h  SignVerifyTests.cpp  SignVerifyTests.h  SymmetricAlgorithmTests.cpp  SymmetricAlgorithmTests.h  TestsBase.cpp  TestsBase.h  TestsNoPINInitBase.cpp  TestsNoPINInitBase.h  TokenTests.cpp  TokenTests.h  UserTests.cpp  UserTests.h  p11test.cpp  softhsm2-alt.conf.in  softhsm2-alt.conf.win32  (+9 more)
src/lib/win32/: dllmain.cc  getopt.cpp  getopt.h  setenv.cpp  setenv.h  syslog.cpp  syslog.h
trunk/: NEWS  README.svn  autogen.sh  configure.ac
trunk/m4/: acx_botan.m4  acx_crypto_backend.m4  acx_dlopen.m4  acx_prefixhack.m4  acx_semaphore.m4  acx_sqlite3.m4  acx_strict.m4
trunk/src/: AsymmetricAlgorithm.h  AsymmetricKeyPair.h  ByteString.cpp  ByteString.h  Configuration.cpp  Configuration.h  CryptoFactory.h  Makefile  Makefile.am  Makefile.crypto  Makefile.lib  OSSLCryptoFactory.cpp  OSSLCryptoFactory.h  OSSLRNG.cpp  OSSLRNG.h  PrivateKey.h  PublicKey.h  RNG.h  SecureAllocator.h  SecureMemoryRegistry.cpp  SecureMemoryRegistry.h  Serialisable.h  SoftHSM.cpp  SoftHSM.h  SymmetricAlgorithm.h  SymmetricKey.h  XMLConfigLoader.h  cryptoki.h  fatal.cpp  fatal.h  log.cpp  log.h  main.cpp  osmutex.h
trunk/src/lib/: AESKey.h  AsymmetricAlgorithm.cpp  AsymmetricAlgorithm.h  AsymmetricKeyPair.cpp  AsymmetricKeyPair.h  BotanCryptoFactory.h  ByteString.cpp  ByteString.h  CryptoFactory.cpp  CryptoFactory.h  DESKey.cpp  DESKey.h  DSAParameters.cpp  DSAParameters.h  DSAPrivateKey.cpp  DSAPublicKey.cpp  DSAPublicKey.h  HashAlgorithm.h  Makefile.am  Makefile.crypto  Makefile.old  OSSLAES.cpp  OSSLAES.h  OSSLCryptoFactory.cpp  OSSLDES.cpp  OSSLDSA.cpp  OSSLDSA.h  OSSLDSAKeyPair.cpp  OSSLDSAKeyPair.h  OSSLDSAPrivateKey.cpp  OSSLDSAPublicKey.cpp  OSSLEVPHashAlgorithm.cpp  OSSLEVPHashAlgorithm.h  OSSLEVPSymmetricAlgorithm.cpp  OSSLEVPSymmetricAlgorithm.h  OSSLMD5.cpp  OSSLMD5.h  OSSLRSA.cpp  OSSLRSA.h  OSSLRSAKeyPair.h  (+36 more)
trunk/src/test/: ByteStringTests.cpp  Makefile  RNGTests.cpp  ent.c  ent.h
(+342 files in other folders)
