ACLOCAL_AMFLAGS = -I m4

MAINTAINERCLEANFILES = \
        config.log config.status \
        $(srcdir)/Makefile.in \
        $(srcdir)/config.h.in $(srcdir)/config.h.in~ \
        $(srcdir)/configure \
        $(srcdir)/install-sh $(srcdir)/ltmain.sh $(srcdir)/missing \
        $(srcdir)/depcomp $(srcdir)/aclocal.m4 $(srcdir)/compile \
        $(srcdir)/config.guess $(srcdir)/config.sub

SUBDIRS = src

EXTRA_DIST =	$(srcdir)/m4/*.m4 \
		$(srcdir)/LICENSE \
		$(srcdir)/README.md \
		$(srcdir)/win32+botan/config.h \
		$(srcdir)/win32+botan/convarch/convarch.vcxproj \
		$(srcdir)/win32+botan/convarch/convarch.vcxproj.filters \
		$(srcdir)/win32+botan/convarch/convarch.vcxproj.user \
		$(srcdir)/win32+botan/cryptotest/cryptotest.vcxproj \
		$(srcdir)/win32+botan/cryptotest/cryptotest.vcxproj.filters \
		$(srcdir)/win32+botan/cryptotest/cryptotest.vcxproj.user \
		$(srcdir)/win32+botan/datamgrtest/datamgrtest.vcxproj \
		$(srcdir)/win32+botan/datamgrtest/datamgrtest.vcxproj.filters \
		$(srcdir)/win32+botan/datamgrtest/datamgrtest.vcxproj.user \
		$(srcdir)/win32+botan/handlemgrtest/handlemgrtest.vcxproj \
		$(srcdir)/win32+botan/handlemgrtest/handlemgrtest.vcxproj.filters \
		$(srcdir)/win32+botan/handlemgrtest/handlemgrtest.vcxproj.user \
		$(srcdir)/win32+botan/keyconv/keyconv.vcxproj \
		$(srcdir)/win32+botan/keyconv/keyconv.vcxproj.filters \
		$(srcdir)/win32+botan/keyconv/keyconv.vcxproj.user \
		$(srcdir)/win32+botan/objstoretest/objstoretest.vcxproj \
		$(srcdir)/win32+botan/objstoretest/objstoretest.vcxproj.filters \
		$(srcdir)/win32+botan/objstoretest/objstoretest.vcxproj.user \
		$(srcdir)/win32+botan/p11test/p11test.vcxproj \
		$(srcdir)/win32+botan/p11test/p11test.vcxproj.filters \
		$(srcdir)/win32+botan/p11test/p11test.vcxproj.user \
		$(srcdir)/win32+botan/sessionmgrtest/sessionmgrtest.vcxproj \
		$(srcdir)/win32+botan/sessionmgrtest/sessionmgrtest.vcxproj.filters \
		$(srcdir)/win32+botan/sessionmgrtest/sessionmgrtest.vcxproj.user \
		$(srcdir)/win32+botan/slotmgrtest/slotmgrtest.vcxproj \
		$(srcdir)/win32+botan/slotmgrtest/slotmgrtest.vcxproj.filters \
		$(srcdir)/win32+botan/slotmgrtest/slotmgrtest.vcxproj.user \
		$(srcdir)/win32+botan/softhsm2/softhsm2.vcxproj \
		$(srcdir)/win32+botan/softhsm2/softhsm2.vcxproj.filters \
		$(srcdir)/win32+botan/softhsm2/softhsm2.vcxproj.user \
		$(srcdir)/win32+botan/softhsm2.sln \
		$(srcdir)/win32+botan/util/util.vcxproj \
		$(srcdir)/win32+botan/util/util.vcxproj.filters \
		$(srcdir)/win32+botan/util/util.vcxproj.user \
		$(srcdir)/WIN32-NOTES \
		$(srcdir)/win32+openssl/config.h \
		$(srcdir)/win32+openssl/convarch/convarch.vcxproj \
		$(srcdir)/win32+openssl/convarch/convarch.vcxproj.filters \
		$(srcdir)/win32+openssl/convarch/convarch.vcxproj.user \
		$(srcdir)/win32+openssl/cryptotest/cryptotest.vcxproj \
		$(srcdir)/win32+openssl/cryptotest/cryptotest.vcxproj.filters \
		$(srcdir)/win32+openssl/cryptotest/cryptotest.vcxproj.user \
		$(srcdir)/win32+openssl/datamgrtest/datamgrtest.vcxproj \
		$(srcdir)/win32+openssl/datamgrtest/datamgrtest.vcxproj.filters \
		$(srcdir)/win32+openssl/datamgrtest/datamgrtest.vcxproj.user \
		$(srcdir)/win32+openssl/handlemgrtest/handlemgrtest.vcxproj \
		$(srcdir)/win32+openssl/handlemgrtest/handlemgrtest.vcxproj.filters \
		$(srcdir)/win32+openssl/handlemgrtest/handlemgrtest.vcxproj.user \
		$(srcdir)/win32+openssl/keyconv/keyconv.vcxproj \
		$(srcdir)/win32+openssl/keyconv/keyconv.vcxproj.filters \
		$(srcdir)/win32+openssl/keyconv/keyconv.vcxproj.user \
		$(srcdir)/win32+openssl/objstoretest/objstoretest.vcxproj \
		$(srcdir)/win32+openssl/objstoretest/objstoretest.vcxproj.filters \
		$(srcdir)/win32+openssl/objstoretest/objstoretest.vcxproj.user \
		$(srcdir)/win32+openssl/p11test/p11test.vcxproj \
		$(srcdir)/win32+openssl/p11test/p11test.vcxproj.filters \
		$(srcdir)/win32+openssl/p11test/p11test.vcxproj.user \
		$(srcdir)/win32+openssl/sessionmgrtest/sessionmgrtest.vcxproj \
		$(srcdir)/win32+openssl/sessionmgrtest/sessionmgrtest.vcxproj.filters \
		$(srcdir)/win32+openssl/sessionmgrtest/sessionmgrtest.vcxproj.user \
		$(srcdir)/win32+openssl/slotmgrtest/slotmgrtest.vcxproj \
		$(srcdir)/win32+openssl/slotmgrtest/slotmgrtest.vcxproj.filters \
		$(srcdir)/win32+openssl/slotmgrtest/slotmgrtest.vcxproj.user \
		$(srcdir)/win32+openssl/softhsm2/softhsm2.vcxproj \
		$(srcdir)/win32+openssl/softhsm2/softhsm2.vcxproj.filters \
		$(srcdir)/win32+openssl/softhsm2/softhsm2.vcxproj.user \
		$(srcdir)/win32+openssl/softhsm2.sln \
		$(srcdir)/win32+openssl/util/util.vcxproj \
		$(srcdir)/win32+openssl/util/util.vcxproj.filters \
		$(srcdir)/win32+openssl/util/util.vcxproj.user
